--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                     </div>
                     <div class="info-row">
                         <div class="info-title">Next</div>
-                        <canvas id="block-display"></canvas>
+                        <div class="info-value-wrapper">
+                            <canvas id="block-display-background"></canvas>
+                            <canvas id="block-display"></canvas>
+                        </div>
                     </div>
                 </div>
                 <div class="info-footer">
