--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="main.css">
     <title>Tetris</title>
 </head>
@@ -16,30 +16,32 @@
             </div>
             <div class="display-menu">
                 <div class="info-panel">
-                    <div class="info-row">
-                        <div class="info-title">Points</div>
-                        <div class="info-value-wrapper">
-                            <div class="info-value-background">888888</div>
-                            <div class="info-value" id="points">0</div>
+                    <div class="info-panel-left">
+                        <div class="info-row">
+                            <div class="info-title">Points</div>
+                            <div class="info-value-wrapper">
+                                <div class="info-value-background">888888</div>
+                                <div class="info-value" id="points">0</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="info-row">
-                        <div class="info-title">Cleans</div>
-                        <div class="info-value-wrapper">
-                            <div class="info-value-background">888888</div>
-                            <div class="info-value" id="cleans">0</div>
+                        <div class="info-row">
+                            <div class="info-title">Cleans</div>
+                            <div class="info-value-wrapper">
+                                <div class="info-value-background">888888</div>
+                                <div class="info-value" id="cleans">0</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="info-row">
-                        <div class="info-title">Level</div>
-                        <div class="info-value-wrapper">
-                            <div class="info-value-background">888888</div>
-                            <div class="info-value" id="level">1</div>
+                        <div class="info-row">
+                            <div class="info-title">Level</div>
+                            <div class="info-value-wrapper">
+                                <div class="info-value-background">888888</div>
+                                <div class="info-value" id="level">1</div>
+                            </div>
                         </div>
                     </div>
                     <div class="info-row">
                         <div class="info-title">Next</div>
-                        <div class="info-value-wrapper">
+                        <div class="info-display">
                             <canvas id="block-display-background"></canvas>
                             <canvas id="block-display"></canvas>
                         </div>
