--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Tetris</title>
 </head>
@@ -70,6 +69,6 @@
             </div>
         </div>
     </main>
-    <script src="./main.js" type="module"></script>
+    <!-- <script src="./main.js" type="module"></script> -->
 </body>
 </html>
