add search console data

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="yandex-verification" content="dcdcd457fb53fada" />
+    <meta name="google-site-verification" content="-FBEZCX9HvkJukBI3Zg3qUiql7Z85yLF7WQvrWY2WFc" />
     <link rel="manifest" href="/.webmanifest">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Tetris</title>
