--- a/src/template.html
+++ b/src/template.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tetris online</title>
+    <title>Classic Tetris Online - Play free</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="yandex-verification" content="dcdcd457fb53fada" />
     <meta name="google-site-verification" content="-FBEZCX9HvkJukBI3Zg3qUiql7Z85yLF7WQvrWY2WFc" />
-    <meta name="description" content="Tetris game online for PC and mobile devices. Installing PWA on ios and android." />
+    <meta name="description" content="Classic Tetris game online for PC and mobile devices. No download required. Installing PWA on ios or android. Optimized for touch screens" />
     <!-- Open Graph -->
-    <meta property="og:title" content="Tetris online"/>
-    <meta property="og:description" content="Tetris game online for PC and mobile devices. Installing PWA on ios and android." />
+    <meta property="og:title" content="Classic Tetris Online - Play free"/>
+    <meta property="og:description" content="Classic Tetris game online for PC and mobile devices. No download required. Installing PWA on ios or android.  Optimized for touch screens" />
     <meta property="og:image" content="/assets/icons/icon-144x144.png" />
     <meta property="og:type" content="games.achieves" />
     <meta property="og:url" content= "https://tetris.gagikpog.ru" />
-    <meta property="og:site_name" content="Tetris online" />
+    <meta property="og:site_name" content="Classic Tetris Online - Play free" />
 
     <link rel="icon" type="image/png" href="/assets/icons/icon-144x144.png">
 
