fix sitemap and index file tags

--- a/src/template.html
+++ b/src/template.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>Классический тетрис онлайн — играйте бесплатно</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="yandex-verification" content="dcdcd457fb53fada" />
-    <meta name="google-site-verification" content="-FBEZCX9HvkJukBI3Zg3qUiql7Z85yLF7WQvrWY2WFc" />
-    <meta name="description" content="Классическая игра Тетрис онлайн для ПК и мобильных устройств. Загрузка не требуется. Установка PWA на ios или android. Оптимизировано для сенсорных экранов" />
+    <meta name="yandex-verification" content="dcdcd457fb53fada">
+    <meta name="google-site-verification" content="-FBEZCX9HvkJukBI3Zg3qUiql7Z85yLF7WQvrWY2WFc">
+    <meta name="description"
+        content="Классическая игра Тетрис онлайн для ПК и мобильных устройств. Загрузка не требуется. Установка PWA на ios или android. Оптимизировано для сенсорных экранов">
     <!-- Open Graph -->
-    <meta property="og:title" content="Классический тетрис онлайн — играйте бесплатно"/>
-    <meta property="og:description" content="Классическая игра Тетрис онлайн для ПК и мобильных устройств. Загрузка не требуется. Установка PWA на ios или android. Оптимизировано для сенсорных экранов" />
-    <meta property="og:image" content="/assets/icons/icon-144x144.png" />
-    <meta property="og:type" content="games.achieves" />
-    <meta property="og:url" content= "https://tetris.gagikpog.ru" />
-    <meta property="og:site_name" content="Классический тетрис онлайн — играйте бесплатно" />
+    <meta property="og:title" content="Классический тетрис онлайн — играйте бесплатно">
+    <meta property="og:description"
+        content="Классическая игра Тетрис онлайн для ПК и мобильных устройств. Загрузка не требуется. Установка PWA на ios или android. Оптимизировано для сенсорных экранов">
+    <meta property="og:image" content="/assets/icons/icon-144x144.png">
+    <meta property="og:type" content="games.achieves">
+    <meta property="og:url" content="https://tetris.gagikpog.ru">
+    <meta property="og:site_name" content="Классический тетрис онлайн — играйте бесплатно">
 
-    <link rel="alternate" hreflang="x-default" href="https://tetris.gagikpog.ru/">
     <link rel="alternate" hreflang="ru" href="https://tetris.gagikpog.ru/">
     <link rel="alternate" hreflang="en" href="https://tetris.gagikpog.ru/en/">
+    <link rel="alternate" hreflang="x-default" href="https://tetris.gagikpog.ru/">
 
     <link rel="icon" type="image/png" href="/assets/icons/icon-144x144.png">
 
     <link rel="manifest" href="/.webmanifest">
 </head>
+
 <body>
     <main>
         <div class="game">
@@ -102,6 +106,7 @@
         </dialog>
     </div>
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </body>
+
 </html>
