--- a/src/template.html
+++ b/src/template.html
@@ -107,6 +107,16 @@
     </div>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-974E1ND4SZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-974E1ND4SZ');
+    </script>
 </body>
 
 </html>
